# nano-pdf-mcp

./: .gitignore  README.md  README_ko.md  pyproject.toml
src/nano_pdf_mcp/: server.py
