[project]
name = "nano-pdf-mcp"
version = "0.1.0"
description = "A memory-efficient PDF Reader and Splitter MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pymupdf",
    "pydantic"
]

[project.scripts]
nano-pdf-mcp = "nano_pdf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
